Move all endpoints to house
