# api/src/main/resources/public/swagger/api.yaml
@@ -9,7 +9,7 @@ tags:
   - name: Authentication
   - name: Users
   - name: Documents
-  - name: Communities
+  - name: Houses
   - name: Amenities
   - name: Houses
   - name: Payments
@@ -483,7 +483,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Create a new community
       operationId: createCommunity
       requestBody:
@@ -510,8 +510,8 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
-      description: List all communities which are registered
+        - Houses
+      description: List all houses which are registered
       operationId: listAllCommunity
       parameters:
         - in: query
@@ -534,7 +534,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Get details about the community given a community id
       operationId: listCommunityDetails
       parameters:
@@ -559,7 +559,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Deletion community with given community id
       operationId: deleteCommunity
       parameters:
@@ -578,7 +578,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: List all admins of the community given a community id
       operationId: listCommunityAdmins
       parameters:
@@ -608,7 +608,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Add a new admin to the community given a community id
       operationId: addCommunityAdmins
       parameters:
@@ -644,7 +644,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Remove of admin associated with a community
       operationId: removeAdminFromCommunity
       parameters:
@@ -668,7 +668,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: List all houses of the community given a community id
       operationId: listCommunityHouses
       parameters:
@@ -696,7 +696,7 @@ paths:
           description: If params are invalid
     post:
       tags:
-        - Communities
+        - Houses
       description: Add a new house to the community given a community id
       operationId: addCommunityHouses
       parameters:
@@ -732,7 +732,7 @@ paths:
       security:
         - bearerAuth: [ ]
       tags:
-        - Communities
+        - Houses
       description: Remove of house from the community given a community id and a house id
       operationId: removeCommunityHouse
       parameters:
@@ -1168,7 +1168,7 @@ components:
     GetCommunityDetailsResponse:
       type: object
       required:
-        - communities
+        - houses
       properties:
         communities:
           type: array
